--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -60,13 +60,13 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: white;
+  color: #0000FF;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
   &:hover {
-    color: white;
+    color: #6495ED;
     text-decoration: none;
   }
 }
@@ -77,11 +77,11 @@ footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
-  color: $gray-light;
+  color: #F0F8FF;
   a {
-    color: $gray;
+    color: #6495ED;
     &:hover {
-      color: $gray-darker;
+      color: #0000FF;
     }
   }
   small {
