--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,14 +13,16 @@
   <body>
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <%= link_to "sample app", '#', id: "logo" %>
-        <nav>
+        <%= link_to "sample app", '#', id: "logo",style: 'background-color: #FFFFF0;' %>
+        /*COMMENT
+<nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",   '#' %></li>
             <li><%= link_to "Help",   '#' %></li>
             <li><%= link_to "Log in", '#' %></li>
           </ul>
         </nav>
+*/
       </div>
     </header>
     <div class="container">
