--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container" color = #6495ED>
-    <%= link_to "sample app", root_path, id: "logo", style: 'background-color: #FFFFF0;'%>
+    <%= link_to "DormRate", root_path, id: "logo", style: 'background-color: #FFFFF0;'%>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",    root_path %></li>
