--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,24 +11,12 @@
     <![endif]-->
   </head>
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <%= link_to "sample app", '#', id: "logo",style: 'background-color: #FFFFF0;' %>
-        /*COMMENT
-<nav>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",   '#' %></li>
-            <li><%= link_to "Help",   '#' %></li>
-            <li><%= link_to "Log in", '#' %></li>
-          </ul>
-        </nav>
-*/
-      </div>
-    </header>
+
+    
     <div class="container">
       <%= yield %>
       <div class="center jumbotron">
-        <h1>Welcome to the Sample App</h1>
+        <h1>Welcome to DormRate!</h1>
 
         <h2>
           This is the home page for the Dorm Rate application
