--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,6 @@
 <footer class="footer">
   <small>
-    The <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    About the author:  <a href="http://vidushg.tech/">Vidush Goswami</a>
   </small>
   <nav>
     <ul>
