--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,8 +21,7 @@
         <h2>
           This is the home page for the Dorm Rate application
         </h2>
-
-        <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+        <%= link_to "Generate Random Hall!", '/hall', class: "btn btn-lg btn-primary" %>
       </div>
 
       <%= link_to image_tag("dorm.png", alt: "DormRate logo")%>
