--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,7 +24,7 @@
         <%= link_to "Generate Random Hall!", '/hall', class: "btn btn-lg btn-primary" %>
       </div>
 
-      <%= link_to image_tag("dorm.png", alt: "DormRate logo")%>
+      <%= link_to image_tag("dorm.png", alt: "DormRate logo"), '#'%>
     </div>
   </body>
 </html>
