Added info to home

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,7 +19,7 @@
         <h1>Welcome to DormRate!</h1>
 
         <h2>
-          This is the home page for the Dorm Rate application
+         Do you want to know which are the best dorms on campus? We have a solution for you! DormRate helps you rate and share 
         </h2>
         <%= link_to "Generate Random Hall!", '/hall', class: "btn btn-lg btn-primary" %>
       </div>
