--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,7 +21,7 @@
         <h2>
          Do you want to know which are the best dorms on campus? We have a solution for you! DormRate helps you rate and share 
         </h2>
-        <%= link_to "Generate Random Hall!", '/hall', class: "btn btn-lg btn-primary" %>
+        <%= link_to "Rate a Room!", '/new', class: "btn btn-lg btn-primary" %>
       </div>
 
       <%= link_to image_tag("dorm.png", alt: "DormRate logo"), '#'%>
