--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,12 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container" color = #6495ED>
+  <div class="container" >
     <%= link_to "DormRate", root_path, id: "logo", style: 'background-color: #FFFFF0;'%>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",    root_path %></li>
         <li><%= link_to "Help",    help_path %></li>
-        <li><%= link_to "Log in", '#' %></li>
+	<li><%= link_to "RandomHall",    hall_path %></li>
+        <li><%= link_to "New Post", new_path %></li>
         <li><%= link_to "Posts", posts_path %></li>
       </ul>
     </nav>
