--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,25 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<% provide(:title, 'New Rating') %>
+<h1>New Rating!</h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@post) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email %>
+
+      <%= f.label :hallRoom, 'Hall and Room' %>
+      <%= f.text_field :room %>
+
+      <%= f.label :rating , 'Rate the room (out of 5)!' %>
+      <%= f.text_field :rating %>
+
+	<%= f.label :description, 'Description : What did you love/hate? How did you use it? Any recommendations about the layout? Etc '  %>
+      <%= f.text_field :desc %>
+
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
