Fixed submit button

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -19,7 +19,7 @@
 	<%= f.label :description, 'Description : What did you love/hate? How did you use it? Any recommendations about the layout? Etc '  %>
       <%= f.text_field :desc %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "Submit Rating", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
