Added text + image

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Contact') %>
 <h1> Contact</h1>
+<p>Hi! I'm a rising senior at Grinnell College majoring in Computer Science, Political Science, and Statistics. I'm interested in Software Development, Data Science, Tech Policy, and the intersection of technology and political science! </p>
 <p>
-  Reach out to Vidush at <a href="mailto:goswamiv@grinnell.edu">his email</a>
+  Reach out to Vidush at <a href="mailto:goswamiv@grinnell.edu">his email</a> or <a href="http://vidushg.tech">his website</a>
 </p>
