--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title, 'Help') %>
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h1>Help</h1>
+<p><b>To post a review of a dorm room</b></p>
+<p>Click on the 'New Post' tab, fill out as much information as you can, upload a picture of your room, and hit post!</p>
+<p><b>To view all reviews posted</b></p>
+<p>Click on 'Posts', and click on whichever room's review you wish to see.</p>
+<h4> Feeling lucky? Click on Random Hall and go look at halls in that hall! Once you get your randomly generated residence hall, view all the posts and find rooms from that hall!</h4>
