--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,8 +23,10 @@
         </h2>
         <%= link_to "Rate a Room!", '/new', class: "btn btn-lg btn-primary" %>
       </div>
-
-      <%= image_tag("dorm.png" ,size: "600x600",alt: "DormRate logo")%>
+	<figure>
+      <%= image_tag("east.jpg" ,size: "600x600",alt: "Grinnell College Dorms")%>
+	<figcaption> Sourced from https://rawnarch.com/grinnell</figcaption>
+	</figure>
     </div>
   </body>
 </html>
