--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,9 @@
 <% provide(:title, 'About') %>
-<h1>About</h1>
+<h1>About DormRate</h1>
 <p>
-  The <a href="https://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
-  <a href="https://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
-  to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
+  Ever wondered if you could find the best rated rooms on campus? DormRate lets users rate their rooms on campus, and everyone can see the rooms, their decorations, and can ask questions!<br>
+
+  Let's make room selection easier than ever before!<br>
+
+  "It's the Yelp of Dorms" -Vidush's Friends
 </p>
