--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@post) do |f| %>
+    <%= form_for(@post, multipart: true) do |f| %>
       <%= f.label :name %>
       <%= f.text_field :name %>
 
@@ -18,6 +18,9 @@
 
 	<%= f.label :description, 'Description : What did you love/hate? How did you use it? Any recommendations about the layout? Etc '  %>
       <%= f.text_field :desc %>
+
+	<%= f.label :dormpic, 'Upload a Picture of your room!' %>
+	<%= f.file_field :dormpic %>
 
       <%= f.submit "Submit Rating", class: "btn btn-primary" %>
     <% end %>
