Added complete cloud functionality

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,9 @@
 <h3> Rating for <%= @post.room %> </h3>
 <em>Published by <%= @post.name %> at <%= @post.updated_at %></em><br>
 <ul><li>Rating (out of 5): <%= @post.rating %> </li>
-<li>Description: <%= @post.desc %> </li></ul>
+<li>Description: <%= @post.desc %> </li>
+<li>Image:  <%= image_tag @post.dormpic %></li></ul>
+
 
 
 
