capped image resize

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -136,6 +136,12 @@ input {
   height: auto !important;
 }
 
+/* image sizes */
+/*.image-size {
+  max-width: 300px;
+  max-height: 200px;
+}*/
+
 
 /* progressBar */
 .progress {
