--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 <em>Published by <%= @post.name %> at <%= @post.updated_at %></em><br>
 <ul><li>Rating (out of 5): <%= @post.rating %> </li>
 <li>Description: <%= @post.desc %> </li>
-<li>Image:  <%= image_tag @post.dormpic %></li></ul>
+<li>Image:  <%= image_tag @post.dormpic, :size => "460x380" %></li></ul>
 
 
 
